Add title in Comic Sans

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
     <head>
         <title>Save Kat from herself!</title>
+        <link rel="stylesheet" type="text/css" href="https://allfont.net/allfont.css?fonts=comic-sans-ms" />
     </head>
     <style>
-        div {
+        body {
+            font-family: 'Comic Sans MS';
+        }
+        main {
             display: flex;
             direction: column;
             height: 100%;
@@ -12,12 +16,18 @@
             align-items: center;
         }
         img {
-            width: 40%;
+            height: 60%;
+        }
+        h1 {
+            text-align: center;
         }
     </style>
     <body>
-        <div>
+        <main>
+            <div>
             <img src="savekat.jpg"> 
-        </div>
+            <h1>From herself</h1>
+            </div>
+        </main>
     </body>
 </html>
