--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Save Kat from herself!</title>
         <link rel="stylesheet" type="text/css" href="https://allfont.net/allfont.css?fonts=comic-sans-ms" />
     </head>
