--- a/index.html
+++ b/index.html
@@ -3,32 +3,36 @@
     <head>
         <meta charset="utf-8">
         <title>Save Kat from herself!</title>
-        <link rel="stylesheet" type="text/css" href="https://allfont.net/allfont.css?fonts=comic-sans-ms" />
     </head>
     <style>
+        @font-face {
+            font-family: 'Comic Sans MS';
+            src: url(comic-sans.ttf);
+        }
         body {
             font-family: 'Comic Sans MS';
         }
-        main {
+        body {
+            margin: 0;
             display: flex;
+            height: 100vh;
             direction: column;
-            height: 100%;
-            width: 100%;
             justify-content: center;
             align-items: center;
         }
         img {
-            height: 60%;
+            height: 60vh;
         }
         h1 {
             text-align: center;
+            font-style: italic;
         }
     </style>
     <body>
         <main>
             <div>
-            <img src="savekat.jpg"> 
-            <h1>From herself</h1>
+                <img src="savekat.jpg"> 
+                <h1>From herself</h1>
             </div>
         </main>
     </body>
