--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
         h1 {
             text-align: center;
             font-style: italic;
+            font-size: 4vh;
         }
     </style>
     <body>
         <main>
             <div>
                 <img src="savekat.jpg"> 
-                <h1>From herself</h1>
+                <h1><marquee>From herself </marquee></h1>
             </div>
         </main>
     </body>
