--- a/index.html
+++ b/index.html
@@ -23,17 +23,43 @@
         img {
             height: 60vh;
         }
-        h1 {
+
+        .marquee {
+            overflow: hidden;
+            position: relative;
+            display: block;
+            height: auto;
+            min-height: 10vh;
+        }
+
+        .marquee p {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            margin: 0;
             text-align: center;
             font-style: italic;
             font-size: 4vh;
+            transform: translateX(100%);
+            animation: scroll-left 10s linear infinite;
+        }
+
+        @keyframes scroll-left {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(-100%);
+            }
         }
     </style>
     <body>
         <main>
             <div>
-                <img src="savekat.jpg"> 
-                <h1><marquee>From herself </marquee></h1>
+                <img src="savekat.jpg">
+                <div class="marquee">
+                    <p>From herself</p>
+                </div>
             </div>
         </main>
     </body>
