Load Comic Neue from Google Fonts

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
         <meta charset="utf-8">
         <title>Save Kat from herself!</title>
     </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
     <style>
-        @font-face {
-            font-family: 'Comic Sans MS';
-            src: url(comic-sans.ttf);
-        }
         body {
-            font-family: 'Comic Sans MS';
+            font-family: 'Comic Neue', cursive;
         }
         body {
             margin: 0;
@@ -39,7 +38,7 @@
             margin: 0;
             text-align: center;
             font-style: italic;
-            font-size: 4vh;
+            font-size: 6vh;
             transform: translateX(100%);
             animation: scroll-left 10s linear infinite;
         }
