We accessible BOIS

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <body>
         <main>
             <div>
-                <img src="savekat.jpg">
+                <img src="savekat.jpg" alt="Cropped photo of a car window sticker reading 'savekat'">
                 <div class="marquee">
                     <p>From herself</p>
                 </div>
