Fix lack of 🌸🌸🌸

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             min-height: 10vh;
         }
 
-        .marquee p {
+        .marquee span {
             position: absolute;
+            white-space: nowrap;
             width: 100%;
             height: 100%;
             margin: 0;
             text-align: center;
-            font-style: italic;
             font-size: 6vh;
             transform: translateX(100%);
             animation: scroll-left 10s linear infinite;
@@ -57,7 +57,7 @@
             <div>
                 <img src="savekat.jpg" alt="Cropped photo of a car window sticker reading 'savekat'">
                 <div class="marquee">
-                    <p>From herself</p>
+                    <span>🌸 From herself 🌸</span>
                 </div>
             </div>
         </main>
