--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div>
                 <img src="savekat.jpg" alt="Cropped photo of a car window sticker reading 'savekat'">
                 <div class="marquee">
-                    <span>🌸 From herself 🌸</span>
+                    <span>ꙮ🌸 From herself 🌸ꙮ</span>
                 </div>
             </div>
         </main>
