--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         <div class="marquee">
             <span class="marquee-content">ꙮ🌸ꙮ🌸ꙮ🌸ꙮ🌸ꙮ🌸<span class="marquee-content"><span class="text">From herself</span></span></span>
         </div>
+        <span>
+            curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh && echo && read -n 1 -s -r -p "Press any key to start Lean" && exit
+        </span>
     </body>
     <script>
         const randomPosition = () => {
